--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,8 @@
   "description": "React UI for a DnD combat tracker.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "GPL-3.0",
