--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-flexbox-grid": "^2.1.2",
     "react-toolbox": "^2.0.0-beta.13"
   }
 }
