--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-flexbox-grid": "^2.1.2",
-    "react-toolbox": "^2.0.0-beta.13"
+    "react-redux": "^5.1.1",
+    "react-toolbox": "^2.0.0-beta.13",
+    "redux": "^4.0.1"
   }
 }
