--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "API for a DnD combat tracker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "mock": "node node_modules/json-server/bin/index.js --fks _id -p 3001  -w db.json"
   },
   "author": "",
   "license": "GPL-3.0",
