--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "react-flexbox-grid": "^2.1.2",
     "react-redux": "^5.1.1",
     "react-toolbox": "^2.0.0-beta.13",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
