--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "cross-fetch": "^2.2.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-flexbox-grid": "^2.1.2",
