--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --host localhost --port 3000 --hot"
   },
   "author": "",
   "license": "GPL-3.0",
