--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "mock": "node node_modules/json-server/bin/index.js --fks _id -p 3001  -w db.json"
+    "mock": "node node_modules/json-server/bin/index.js --fks _id -p 3001  -w db.json",
+    "mock_users": "node node_modules/json-server/bin/index.js --fks _id -p 3001  -w db.json"
   },
   "author": "",
   "license": "GPL-3.0",
