hey, I can update characters

--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "cross-fetch": "^2.2.3",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-flexbox-grid": "^2.1.2",
