--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,10 @@
   "name": "dnd_combat_ui",
   "version": "0.0.1",
   "description": "React UI for a DnD combat tracker.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cdvanhorn/dnd_combat.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,28 +15,27 @@
   "author": "",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.27.1",
+    "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
     "cross-fetch": "^2.2.3",
     "lodash": "^4.17.11",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-flexbox-grid": "^2.1.2",
+    "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.3",
+    "react-dom": "^16.7.0",
     "react-redux": "^5.1.1",
-    "react-toolbox": "^2.0.0-beta.13",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   }
