--- a/ui/package.json
+++ b/ui/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.7.0",
     "react-redux": "^5.1.1",
+    "react-select": "^2.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   }
